--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "~12.0.0-rc.0",
     "@angular/platform-browser-dynamic": "~12.0.0-rc.0",
     "@angular/router": "~12.0.0-rc.0",
+    "@ngrx/effects": "^11.1.1",
+    "@ngrx/entity": "^11.1.1",
+    "@ngrx/store": "^11.1.1",
+    "@ngrx/store-devtools": "^11.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
